Fix Content control "down arrow" cannot be recognized in dark mode
- add missing image path for data-them dark

--- a/browser/css/writer.css
+++ b/browser/css/writer.css
@@ -10,3 +10,8 @@
 	box-sizing: border-box;
 	box-shadow: 0 0 1px 1px #00000015;
 }
+[data-theme='dark'] .writer-drop-down-marker {
+	background: url('images/dark/unfold.svg') center/16px var(--color-background-lighter) no-repeat;
+	border: 1px solid var(--color-primary-lighter);
+
+}
